# final-nn

./: README.md  autoencoder.ipynb  classifier.ipynb  pyproject.toml
.github/workflows/: test.yml
nn/: nn.py  nn2.py  preprocess.py
test/: test_nn.py
